apps/base/beszel/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: beszel
  labels:
    app.kubernetes.io/name: beszel
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: beszel
  namespace: beszel
  labels:
    app.kubernetes.io/name: beszel
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: beszel-agent
          podSelector:
            matchLabels:
              app.kubernetes.io/name: beszel-agent
      ports:
        - port: 8090
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8090
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: beszel
  policyTypes:
    - Ingress
